@@ -37,7 +37,7 @@
 /* Versioning */
 
 #ifdef __WIN32__
-# define LIBFILES_VERSION "0.2.7"
+# define LIBFILES_VERSION "0.2.8"
 #else
 # define LIBFILES_VERSION VERSION
 #endif
